Update con local storage

--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ button {
 }
 
 .todo-check {
-  cursor: cursor;
+  cursor: pointer;
   padding: 16px;
   border-radius: 16px 0 0 16px;
   background-color: rgb(217, 255, 102);
